Version 0.3.3

- Added an as.matrix() method for 'pias' objects. This makes it easy to aggregate a price index as a matrix operation; just matrix multiplying the aggregation matrix with the elemental indexes.