@@ -64,43 +64,3 @@ elemental_index.numeric <- function(rel, period = gl(1, length(rel)), ea = gl(1,
               chain = chain)
   structure(res, class = "ind")
 }
-
-#---- Coerce to an index ----
-as_index <- function(x, ...) {
-  UseMethod("as_index")
-}
-
-as_index.default <- function(x, ...) {
-  as_index(as.matrix(x), ...)
-}
-
-as_index.matrix <- function(x, chain = TRUE, ...) {
-  if (!(nrow(x) && ncol(x))) {
-    stop(gettext("cannot make an index with no periods or elemental aggregates"))
-  }
-  storage.mode(x) <- "numeric"
-  if (is.null(rownames(x))) rownames(x) <- seq_len(nrow(x))
-  if (is.null(colnames(x))) colnames(x) <- seq_len(ncol(x))
-  levels <- rownames(x)
-  periods <- colnames(x)
-  if (anyDuplicated(levels) || anyDuplicated(periods)) {
-    stop(gettext("'x' cannot have duplicated row or column names"))
-  }
-  res <- list(index = NULL, contrib = NULL, levels = levels, 
-              time = periods, has_contrib = FALSE, chain = chain)
-  res$index <- res$contrib <- 
-    structure(vector("list", ncol(x)), names = periods)
-  res$contrib[] <- empty_contrib(levels)
-  for (t in seq_along(periods)) {
-    # EA names are not kept for matrices with 1 row
-    res$index[[t]] <- structure(x[, t], names = rownames(x))
-  }
-  structure(res, class = "ind")
-}
-
-as_index.ind <- function(x, ...) {
-  x
-}
-
-#---- Test ----
-is_index <- function(x) inherits(x, "ind")
