@@ -150,6 +150,12 @@ Type 'q()' to quit R.
 > all.equal(epr1, Reduce(stack, unstack(epr1)))
 [1] TRUE
 > 
+> # Coercion are opposite operations
+> all.equal(chain(epr1), as_index(as.matrix(chain(epr1)), chain = FALSE))
+[1] TRUE
+> all.equal(chain(epr1), as_index(as.data.frame(chain(epr1))[c(2, 1, 3)], c(2, 1, 3), chain = FALSE))
+[1] TRUE
+>
 > # Test mean.ind()
 > epr4 <- mean(epr1, window = 12)
 > all.equal(levels(epr4), levels(epr1))
@@ -438,12 +444,14 @@ NULL
 [1] TRUE
 > 
 > # It shouldn't be possible to make a non-numeric index
-> epr <- as_index(data.frame(a = as.character(1:5), b = 1:5))
+> mat <- as.matrix(data.frame(a = as.character(1:5), b = 1:5))
+>
+> epr <- as_index(mat)
 > is.numeric(as.matrix(epr))
 [1] TRUE
 > 
 > epr[, "b"] <- as.character(1:5)
-> all.equal(epr, as_index(data.frame(a = as.character(1:5), b = 1:5)))
+> all.equal(epr, as_index(mat))
 [1] TRUE
 > 
 > # Nor one without EA names
